[project]
name = "pp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clickhouse-connect[arrow,pyarrow]>=0.11.0",
    "openpyxl>=3.1.5",
    "pandas[parquet]>=3.0.0",
    "python-calamine>=0.6.1",
    "sqlalchemy>=2.0.46",
]
